# Forge

./: .gitignore  com.crosine.Forge.json  meson.build  pyproject.toml  python-dependencies.json  requirements.txt
data/: Forge.data.gresource.xml  com.crosine.Forge.appdata.xml.in  com.crosine.Forge.desktop.in  com.crosine.Forge.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
scripts/: update_deps.py
src/: Forge.in  forge.gresource.xml  main.py  main_window.py  meson.build
src/mail/: client.py  meson.build
src/mail/imap/: meson.build  session.py
subprojects/: .gitignore
ui/: Forge.UI.gresource.xml  main_window.blp  meson.build
